<resources>
    <string name="app_name">Assignment1_Seperate</string>

    <string name="hello">Hello World, VaxjoWeather!</string>
    <string name="settings">Settings</string>

    <!-- String values for BMI -->

    <string name="random_number">Random Number</string>
    <string name="app_startup_number">100</string>
    <string name="title_activity_bmi">BMI</string>
    <string name="bmi_startup_number">0</string>

    <string name="bmi_error_textinput">Input must be a number</string>
    <string name="bmi_eu_metric">EU Metric</string>
    <string name="bmi_us_metric">US Metric</string>

    <string name="bmi_eu_meters">meter</string>
    <string name="bmi_eu_kg">kilogram</string>

    <string name="bmi_us_inches">inches</string>
    <string name="bmi_us_pounds">pounds</string>

    <string name="bmi_over_30_help">Do you need help?</string>
    <string name="bmi_over_30_accept_help">Please help me!</string>
    <string name="bmi_over_30_reject_help">No thanks, im fine!</string>

    <!-- String values for my countries -->

    <string name="title_activity_my_countries">MyCountries</string>
    <string name="welcome_text_my_countries">Welcome to My Countries</string>
    <string name="menu_add_country">Add Country</string>

    <string name="add_country_back">Back</string>
    <string name="add_country_add">Add</string>
    <string name="error_input">Invalid Input</string>

    <string name="hint_year">Year</string>
    <string name="hint_country">Country</string>


    <string name="title_activity_add_my_countries">AddMyCountries</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- String values of all beer titles -->
    <string name="mornin_delight_title">Title: Mornin\' Delight</string>
    <string name="good_morning_title">Title: Good Morning</string>
    <string name="pliny_the_younger_title">Title: Pliny The Younger</string>
    <string name="heady_topper_title">Title: Heady Topper</string>
    <string name="kentucky_brunch_brand_stout_title">Title: Kentucky Brunch Brand Stout</string>
    <string name="pliny_the_elder_title">Title: Pliny The Elder</string>
    <string name="norrlands_guld_export_title">Title: Norrlands Guld Export</string>

    <!-- String values for all beer ratings -->
    <string name="mornin_delight_rating">Rating: 4.7</string>
    <string name="good_morning_rating">Rating: 4.7</string>
    <string name="pliny_the_younger_rating">Rating: 4.68</string>
    <string name="heady_topper_title_rating">Rating: 4.67</string>
    <string name="kentucky_brunch_brand_stout_rating">Rating: 4.66</string>
    <string name="pliny_the_elder_rating">Rating: 4.59</string>
    <string name="norrlands_guld_export_rating">Rating: 2.62</string>

    <!-- String values for all beer breweries -->
    <string name="mornin_delight_brewery">Brewery: Toppling Goliath Brewing Company, Iowa, United States</string>
    <string name="good_morning_brewery">Brewery: Tree House Brewing Company, Massachusetts, United States</string>
    <string name="pliny_the_younger_brewery">Brewery: Russian River Brewing Company, California, United States</string>
    <string name="heady_topper_title_brewery">Brewery: The Alchemist, Vermont, United States</string>
    <string name="kentucky_brunch_brand_stout_brewery">Brewery: Toppling Goliath Brewing Company, Iowa, United States</string>
    <string name="pliny_the_elder_brewery">Brewery: Russian River Brewing Company, California, United States</string>
    <string name="norrlands_guld_export_brewery">Brewery: Spendrups Bryggeri AB, Sweden</string>

    <!-- String values for all beer styles -->
    <string name="mornin_delight_style">Style: American Double / Imperial Stout</string>
    <string name="good_morning_style">Style: American Double / Imperial Stout</string>
    <string name="pliny_the_younger_style">Style: American Double / Imperial IPA</string>
    <string name="heady_topper_title_style">Style: American Double / Imperial IPA</string>
    <string name="kentucky_brunch_brand_stout_style">Style: American Double / Imperial Stout</string>
    <string name="pliny_the_elder_style">Style: American Double / Imperial IPA</string>
    <string name="norrlands_guld_export_style">Style: Dortmunder / Export Lager</string>

    <!-- String values for all beer ABV's -->
    <string name="mornin_delight_ABV">ABV: 12.00 %</string>
    <string name="good_morning_ABV">ABV: 8.40%</string>
    <string name="pliny_the_younger_ABV">ABV: 11.00%</string>
    <string name="heady_topper_title_ABV">ABV: 8.00%</string>
    <string name="kentucky_brunch_brand_stout_ABV">ABV: 12.00%</string>
    <string name="pliny_the_elder_ABV">ABV: 8.00%</string>
    <string name="norrlands_guld_export_ABV">ABV: 5.3%</string>

    <!-- String values for all beer reviews -->
    <string name="mornin_delight_review">Review: This was my first time trying Md during the release. Prior to the release, I opened my bcbs 2014/13 and Kbs 15/12 and bcbs vr 2014 to remind myself of what goodness should be. And MD was up there with VR. The aroma/taste reminded me of slow drip coffee from single origin coffee beans blended perfect with maple syrup. The body was perfect as it had a fuller month feel than a Kbs but not as full as a VR. </string>
    <string name="good_morning_review">Review: Phenomenal beer. So great. Looks like a classic imperial stout but with a rich brown, foamy head. The nose is of sweet amply syrup, with a more subtle coffee undertone. Kind of surprising given how strong of a coffee flavor their double shot has. The taste is more than expected. Definite maple, coffee, sweet and sticky. Nice think velvet body, but Sioux being syrupy. Without a doubt one of best 3 beers I\'ve had the pleasure of trying. </string>
    <string name="pliny_the_younger_review">Review: Had this on opening day Feb 6, 2015 after waiting in line for 4.5 hrs in the pouring rain. It is a spectacular beer to have straight from the source. Although a very high abv it does not taste alcohol forward and is truly balanced with a good amount of hops on your tongue, a bit of grapefruit follow through and a floral scent. Had a great time drying off and warming up and 3 10oz pours along with some Elder and Blind Pig hit the spot. It is a special beer worth the effort.</string>
    <string name="heady_topper_title_review">Review: I was lucky enough to get some Heady Topper last week on a trip up to VT. I stood in line for two hours total at a couple of different places in Burlington and ended up with a little over a case, it was completely worth the wait. It is the most drinkable IPA I\'ve ever tasted, very smooth, and as the can says it leaves you with "wave after wave of hoppy goodness!" Not to mention at 8% ABV one or two of these bad boys will leave feeling nice and hopped up. I only wish they would make more so more people could try this amazing beer!</string>
    <string name="kentucky_brunch_brand_stout_review">Review: Pours like all TG stouts which nearly equates to motor oil. Of course the mouth feel will follow the pour which allows you to chew on the deliciousness that ensues. Scent is roasted coffee with chocolate and maple. Bit of booze in there as well. Flavor is something I\'ve yet to find any other beer match between the coffee, maple, chocolate, molasses and balanced mouthfeel that lets you mull this beer over a bit.</string>
    <string name="pliny_the_elder_review">Review: Poured clear amber color into a pint glass with a persistent fluffy white head. The aroma was the star of this beer: a monstrous blast of fresh hops, citric and spicy. The flavor was initially overwhelming sharp hop bitterness. This faded to a pleasant biscuity malt flavor. Medium high carbonation was almost prickly on the tongue, but helped round out the mouthfeel of a beer that could have otherwise been a touch heavy. Instead, it is an easy drinking beer that finishes clean and sweet, but short of sticky sweet, and with a hint of the citrus and spice of the hops. Overall, it is a fantastic IPA. </string>
    <string name="norrlands_guld_export_review">Review: Swedish beer is fun to me because I can buy it at Systembolaget and anywhere else like 7-11, the later being of lower alcohol versions of the former. I only tried the lower alcohol version of this one, as there are other better Swedish beers to get in higher alcohol. Average in all ways, not really good but not bad either. Smells a bit of corn, all in all nothing special. Nevertheless I liked this beer and it served me well. I was still able to drink much with my friends, when I had a sore throat! It was very smooth in all ways. Take it for what it is and enjoy. Just a typical beer to drink and have a good time</string>
    <string name="title_activity_navigation">NavigationActivity</string>



    <!-- Navigation bar related Strings -->

    <string name="welcome_nav_bar">Welcome</string>
    <string name="info_nav_bar">Use the navigation bar in the top left corner to view my apps</string>
    <string name="info_nav_bar_two">In order to return to the nav bar, press the back button.</string>

    <string name="title_section1">Home</string>
    <string name="title_section2">Random Number</string>
    <string name="title_section3">BMI</string>
    <string name="title_section4">MyCountries</string>
    <string name="title_section5">WeatherApp</string>
    <string name="title_section6">BeerPager</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>


</resources>
